src/snapshots/venial__tests__parse_default_fn_definitions.snap
---
source: src/tests.rs
assertion_line: 556
expression: func
---
Function(
    Function {
        attributes: [],
        vis_marker: Some(
            pub,
        ),
        qualifiers: FunctionQualifiers {
            is_default: true,
            is_const: false,
            is_async: false,
            is_unsafe: false,
            is_extern: false,
            extern_abi: None,
        },
        name: Ident(
            default_fn,
        ),
        generic_params: None,
        params: [
            FunctionParameter {
                attributes: [],
                name: Ident(
                    b,
                ),
                ty: [
                    "f32",
                ],
            },
        ],
        where_clauses: None,
        return_ty: None,
    },
)
