src/snapshots/venial__tests__parse_empty_enum.snap
---
source: src/tests.rs
expression: enum_type
---
Enum(
    Enum {
        attributes: [],
        vis_marker: None,
        tk_enum: Ident(
            enum,
        ),
        name: Ident(
            Hello,
        ),
        generic_params: None,
        where_clauses: None,
        variants: [],
    },
)
