src/snapshots/venial__tests__parse_empty_fn_definitions.snap
---
source: src/tests.rs
expression: func
---
Function(
    Function {
        attributes: [],
        vis_marker: None,
        name: Ident(
            test_me,
        ),
        generic_params: None,
        where_clauses: None,
        params: [],
        returns: None,
    },
)
