src/snapshots/venial__tests__parse_empty_struct.snap
---
source: src/tests.rs
assertion_line: 68
expression: struct_type
---
Struct(
    Struct {
        attributes: [],
        vis_marker: None,
        name: Ident(
            Hello,
        ),
        generic_params: None,
        where_clauses: None,
        fields: Named(
            [],
        ),
    },
)
