src/snapshots/venial__tests__parse_empty_tuple.snap
---
source: src/tests.rs
assertion_line: 59
expression: struct_type
---
Struct(
    Struct {
        attributes: [],
        vis_marker: None,
        name: "Hello",
        fields: Tuple(
            [],
        ),
    },
)
