src/snapshots/venial__tests__parse_enum.snap
---
source: src/tests.rs
assertion_line: 50
expression: enum_type
---
Enum(
    Enum {
        name: "Hello",
        variants: [
            EnumVariant {
                attributes: [],
                name: "A",
                contents: Unit,
            },
            EnumVariant {
                attributes: [],
                name: "B",
                contents: Tuple(
                    [
                        TupleField {
                            attributes: [],
                            ty: [
                                "Foo",
                            ],
                        },
                        TupleField {
                            attributes: [],
                            ty: [
                                "Bar",
                            ],
                        },
                    ],
                ),
            },
            EnumVariant {
                attributes: [],
                name: "C",
                contents: Named(
                    [
                        NamedField {
                            attributes: [],
                            name: "foo",
                            ty: [
                                "Foo",
                            ],
                        },
                        NamedField {
                            attributes: [],
                            name: "bar",
                            ty: [
                                "Bar",
                            ],
                        },
                    ],
                ),
            },
        ],
    },
)
