src/snapshots/venial__tests__parse_enum_empty_generic_params.snap
---
source: src/tests.rs
assertion_line: 429
expression: enum_type
---
Enum(
    Enum {
        attributes: [],
        vis_marker: None,
        name: Ident(
            Hello,
        ),
        generic_params: Some(
            [],
        ),
        where_clauses: Some(
            [
                [
                    A,
                    "<",
                    ">",
                    ":",
                    B,
                    "<",
                    ">",
                ],
            ],
        ),
        variants: [
            EnumVariant {
                attributes: [],
                vis_marker: None,
                name: Ident(
                    A,
                ),
                contents: Unit,
                discriminant: None,
            },
            EnumVariant {
                attributes: [],
                vis_marker: None,
                name: Ident(
                    B,
                ),
                contents: Tuple(
                    [
                        TupleField {
                            attributes: [],
                            vis_marker: None,
                            ty: [
                                Foo,
                            ],
                        },
                        TupleField {
                            attributes: [],
                            vis_marker: None,
                            ty: [
                                Bar,
                                "<",
                                ">",
                            ],
                        },
                    ],
                ),
                discriminant: None,
            },
            EnumVariant {
                attributes: [],
                vis_marker: None,
                name: Ident(
                    C,
                ),
                contents: Named(
                    [
                        NamedField {
                            attributes: [],
                            vis_marker: None,
                            name: Ident(
                                foo,
                            ),
                            _colon: Punct {
                                char: ':',
                                spacing: Alone,
                            },
                            ty: [
                                Foo,
                                "<",
                                ">",
                            ],
                        },
                        NamedField {
                            attributes: [],
                            vis_marker: None,
                            name: Ident(
                                bar,
                            ),
                            _colon: Punct {
                                char: ':',
                                spacing: Alone,
                            },
                            ty: [
                                Bar,
                            ],
                        },
                    ],
                ),
                discriminant: None,
            },
        ],
    },
)
