src/snapshots/venial__tests__parse_enum_vis-3.snap
---
source: src/tests.rs
assertion_line: 182
expression: enum_type_crate
---
Enum(
    Enum {
        attributes: [],
        vis_marker: Some(
            crate,
        ),
        name: Ident(
            Hello,
        ),
        generic_params: None,
        where_clauses: None,
        variants: [
            EnumVariant {
                attributes: [],
                vis_marker: None,
                name: Ident(
                    A,
                ),
                contents: Unit,
                discriminant: None,
            },
            EnumVariant {
                attributes: [],
                vis_marker: None,
                name: Ident(
                    B,
                ),
                contents: Tuple(
                    [
                        TupleField {
                            attributes: [],
                            vis_marker: None,
                            ty: [
                                Foo,
                            ],
                        },
                        TupleField {
                            attributes: [],
                            vis_marker: None,
                            ty: [
                                Bar,
                            ],
                        },
                    ],
                ),
                discriminant: None,
            },
            EnumVariant {
                attributes: [],
                vis_marker: None,
                name: Ident(
                    C,
                ),
                contents: Named(
                    [
                        NamedField {
                            attributes: [],
                            vis_marker: None,
                            name: Ident(
                                foo,
                            ),
                            ty: [
                                Foo,
                            ],
                        },
                        NamedField {
                            attributes: [],
                            vis_marker: None,
                            name: Ident(
                                bar,
                            ),
                            ty: [
                                Bar,
                            ],
                        },
                    ],
                ),
                discriminant: None,
            },
        ],
    },
)
